--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
   </head>
   <body>
     <div id="background-deco">
-      <span><img src="assets/deco-circle-2.svg" /></span>
-      <span><img src="assets/deco-circle-2.svg" /></span>
-      <span><img src="assets/deco-circle-1.svg" /></span>
-      <span><img src="assets/deco-circle-1.svg" /></span>
-      <span><img src="assets/deco-circle-2.svg" /></span>
+      <span class="use-appear"><img src="assets/deco-circle-2.svg" /></span>
+      <span class="use-appear"><img src="assets/deco-circle-2.svg" /></span>
+      <span class="use-appear"><img src="assets/deco-circle-1.svg" /></span>
+      <span class="use-appear"><img src="assets/deco-circle-1.svg" /></span>
+      <span class="use-appear"><img src="assets/deco-circle-2.svg" /></span>
     </div>
 
     <main>
       <section id="search-section" class="card">
-        <input id="search-input" placeholder="Search ... " autocomplete="off" />
+        <input
+          id="search-input"
+          class="use-appear"
+          placeholder="Search ... "
+          autocomplete="off"
+        />
 
         <div id="search-actions">
           <button type="button" id="search-actions__clear">
