Resolve parallax and appear animation conflict

--- a/index.html
+++ b/index.html
@@ -21,11 +21,21 @@
   </head>
   <body>
     <div id="background-deco">
-      <span class="use-appear"><img src="assets/deco-circle-2.svg" /></span>
-      <span class="use-appear"><img src="assets/deco-circle-2.svg" /></span>
-      <span class="use-appear"><img src="assets/deco-circle-1.svg" /></span>
-      <span class="use-appear"><img src="assets/deco-circle-1.svg" /></span>
-      <span class="use-appear"><img src="assets/deco-circle-2.svg" /></span>
+      <span
+        ><div class="use-appear"><img src="assets/deco-circle-2.svg" /></div
+      ></span>
+      <span
+        ><div class="use-appear"><img src="assets/deco-circle-2.svg" /></div
+      ></span>
+      <span
+        ><div class="use-appear"><img src="assets/deco-circle-1.svg" /></div
+      ></span>
+      <span
+        ><div class="use-appear"><img src="assets/deco-circle-1.svg" /></div
+      ></span>
+      <span
+        ><div class="use-appear"><img src="assets/deco-circle-2.svg" /></div
+      ></span>
     </div>
 
     <main>
