Background objects amount, size and blur adjustments

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       <span
         ><div class="use-appear"><img src="assets/deco-circle-2.svg" /></div
       ></span>
+      <span
+        ><div class="use-appear"><img src="assets/deco-circle-1.svg" /></div
+      ></span>
     </div>
 
     <main>
